# parapilot

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.ko.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  smithery.yaml
.claude/: ralph-loop.local.md
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  pr-quality.yml  publish.yml  scorecard.yml  security.yml
agents/: viz-agent.md
benchmarks/: bench_render.py
commands/: kimtech.md
docs/: OSS_STRATEGY.md
docs/launch/: reddit-openfoam.md
paper/: paper.bib  paper.md
scripts/: generate_showcase.py
scripts/launch/: roadmap.json
src/kimtech/: __init__.py  server.py
src/parapilot/: __main__.py  errors.py  logging.py  server.py
tests/: test_property.py  test_resources.py
tests/test_core/: test_compiler.py  test_compositor.py  test_config.py  test_output.py  test_registry.py  test_runner.py
tests/test_engine/: test_camera.py  test_camera_auto.py  test_colormaps.py  test_filters.py  test_lighting.py  test_overlay.py  test_physics.py  test_postfx.py  test_readers.py  test_renderer.py  test_scene.py
tests/test_pipeline/: test_engine.py
tests/test_tools/: test_compare_impl.py  test_mcp_compliance.py  test_mcp_integration.py  test_server.py  test_server_tools.py  test_split_animate.py  test_tool_impls.py
(+27 files in other folders)
